pipeline script converted fully, cicd process todo next

--- a/claims_pipeline/notebooks/ml-engineer_pre-selection_task.ipynb
+++ b/claims_pipeline/notebooks/ml-engineer_pre-selection_task.ipynb
@@ -1119,7 +1119,7 @@
     "    eval_metric=eval_metrics,\n",
     "    early_stopping_rounds=15,\n",
     "    enable_categorical=True,\n",
-    "    **parameter_gridSearch.best_params_,  # Not sure what this does, from StackOverflow\n",
+    "    **parameter_gridSearch.best_params_,  # Not sure what this does, from StackOverflow. \n",
     ")\n",
     "\n",
     "model3.fit(X_train, y_train, eval_set=eval_set, verbose=False)"
